--- a/index.html
+++ b/index.html
@@ -3,8 +3,27 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>codeomnia</title>
-  </head>
+    <title>CodeOmnia</title>
+    <link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon">
+    <!-- Primary Meta Tags -->
+    <title>CodeOmnia</title>
+    <meta name="title" content="CodeOmnia">
+    <meta name="description" content="CodeOmnia is an IT Consultant and Website Developer based in Indonesia who driven in the newest technology and always bringing the best for your business.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://codeomnia-ccb68.web.app/">
+    <meta property="og:title" content="CodeOmnia">
+    <meta property="og:description" content="CodeOmnia is an IT Consultant and Website Developer based in Indonesia who driven in the newest technology and always bringing the best for your business.">
+    <meta property="og:image" content="static/codeomniaBig.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://codeomnia-ccb68.web.app/">
+    <meta property="twitter:title" content="CodeOmnia">
+    <meta property="twitter:description" content="CodeOmnia is an IT Consultant and Website Developer based in Indonesia who driven in the newest technology and always bringing the best for your business.">
+    <meta property="twitter:image" content="static/codeomniaBig.png">
+      </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
